<resources>
    <string name="app_name">FirstPractiseAPI34</string>
    <string name="firstfragment">FirstFragment</string>
    <string name="secondfragment">SecondFragment</string>
    <string name="thirdfragment">ThirdFragment</string>
    <string name="firstMenuTitle">Home</string>
    <string name="secondMenuTitle">Image</string>
    <string name="thirdMenuTitle">Camera</string>
    <string name="fourthMenuTitle">Dates</string>
    <string name="fifthMenuTitle">Retrofit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_item">Enter item</string>
    <string name="add">add</string>
    <string name="textview">TextView</string>
</resources>